src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder-3.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder  ◆ COMPLETE                                                                                                                                          
 allocated ##.#K   reclaim ##.#K   apparent 12.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────┤│subfolder1                        │
││                                                                                                    │██████████████████████████████████████████████████││◆ COMPLETE · directory            │
││                                                                                                    │██████████████████████████████████████████████████││allocated #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││reclaim   #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││apparent 4.0K · entries 1         │
││                                                                                                    │██████████████████████████████████████████████████││identity  Inod[...]ber: ######## }│
││                                                                                                    │██████████████████████████████████████████████████││links     # · [...]   materialized│
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file2                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │███████████subfolder1/ (+1 descendants)███████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
│├────────────────────────────────────────────────────────────────────────────────────────────────────┤██████████████████████████████████████████████████││                                  │
││                                                                                                    │████████████████████4.0K (33%)████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file3                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
