src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder-4.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder  ◆ COMPLETE                                                                                                                                          
 allocated ##.#K   reclaim ##.#K   apparent 12.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────┤│subfolder1                        │
││                                                                                                    │██████████████████████████████████████████████████││◆ COMPLETE · directory            │
││                                                                                                    │██████████████████████████████████████████████████││allocated #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││reclaim   #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││apparent 4.0K · entries 1         │
││                                                                                                    │██████████████████████████████████████████████████││identity  Inode[...]ber: ######## │
││                                                                                                    │██████████████████████████████████████████████████││}                                 │
││                                                                                                    │██████████████████████████████████████████████████││links     3 · s[...]              │
││                                                                                                    │██████████████████████████████████████████████████││materialized                      │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file2                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                      ╔ ! BUILDING IDENTITY PLAN ══════════════════════════════════════════════════╗███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║/tmp/excise_tests/delete_folder/subfolder1                                  ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║Enumerating a no-follow identity snapshot.                                  ║███████████████████││                                  │
││                                                      ║Deletion is disabled until the plan is complete.                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║[Esc] cancel                                                                ║endants)███████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
│├──────────────────────────────────────────────────────║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝███████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file3                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
